--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ venv
 __pycache__
 /__pycache__
 site
-/cielo-rio-grande/backend/data
+/cielo-rio-grande/backend/data/
 registros-octas.db
+registros-octas.db-wal
